manifests/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"comments:latest","namespace":"dhbw-exercise-1"},"fieldPath":"spec.template.spec.containers[?(@.name==\"comments\")].image","pause":"false"}]'
  labels:
    app: comments
    app.kubernetes.io/component: comments
    app.kubernetes.io/instance: comments
    app.kubernetes.io/part-of: dhbw-exercise-1
  name: comments
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: comments
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: comments
        deploymentconfig: comments
    spec:
      containers:
      - image: replace/me/comments:latest
        imagePullPolicy: Always
        name: comments
        ports:
        - containerPort: 4001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
