manifests/deploy/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: comments
    app.kubernetes.io/component: comments
    app.kubernetes.io/instance: comments
    app.kubernetes.io/part-of: dhbw-exercise-1
  name: comments
spec:
  ports:
  - name: 4001-tcp
    port: 4001
    protocol: TCP
    targetPort: 4001
  selector:
    app: comments
    deploymentconfig: comments
  sessionAffinity: None
  type: ClusterIP
