manifests/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: comments
spec:
  rules:
    - host: comments-dhbw-exercise-1.2886795283-80-kota02.environments.katacoda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: comments
              servicePort: 4001
